# CHIP-8-Emulator

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: chip8.cpp  chip8.h  main.cpp
