cmake_minimum_required(VERSION 2.8.4)
project(CHIP_8_Emulator)

set(CMAKE_C_STANDARD 11)

set(SOURCE_FILES src/main.cpp src/chip8.h src/chip8.cpp)
add_executable(chip8 ${SOURCE_FILES})

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(SDL2 REQUIRED sdl2)
IF(SDL2_FOUND)
    INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
    ADD_DEFINITIONS(${SDL2_CFLAGS_OTHER})
    SET(LIBRARIES ${LIBRARIES} ${SDL2_LINK_LIBRARIES})
ENDIF()

TARGET_LINK_LIBRARIES(chip8 ${LIBRARIES})
